--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,36 +1,225 @@
-.span{
-    font-family: var(--second-family);
-    font-weight: 700;
-    font-size: 26px;
-    color: var(--accent-color);
-  }
-  :root {
-    --accent-color: #2196F3;
-    --logo-color: #000000;
-    --title-color: #FFFFFF;
-    --desk-color: #757575;
-    --color: #212121;
-    --background-color1: #F5F4FA;
-    --background-color: #2F303A;
-    --main-font: "Raleway" , "sans-serif";
-    --second-font: "Roboto" , "sans-serif";
-}
-body {
- 
-  color: #757575;
-  background-color: #FFFFFF;
- font-family: "Roboto", sans-serif;
-}
-.container {
-  width: 1170px;
-  margin: 0 auto;
-}
-.portofolio-item{
-  flex-basis: calc((100% - 60px ) / 3);
+:root{
+
+  --white: #fff;
+  --black: #000;
+  --backgroung-base: #fff;
+  --background-dark: #2F303A;
+  --background-dimmed: #F5F4FA;
+  --primary-text: #757575;
+  --secondary-text: #FFFFFF;
+  --primary-title: #212121;
+  --secondary-title: #FFFFFF;
+  --hover-link: #2196F3;
+  --btn-background-highlight: #2196F3;
+  --btn-background-dimmed: #F5F4FA;
+  --btn-color-light: #FFFFFF;
+  --logo-span: #2196F3;
+  --wrap-border: #eee;
 
 }
-.portfolio-list{
+
+:root {
+--font-family: "Roboto", sans-serif;
+--second-family: "Raleway", sans-serif;
+}
+
+/* main settings */
+
+body{
+  padding: 0px;
+  margin: 0px;
+  font-size: 14px;
+}
+
+.container{
+  width: 1250px;
+  margin: 0 auto;
+}
+
+a, p, ul, li, h1, h2, h3{
+  padding: 0px;
+  margin: 0px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+}
+
+/* header */
+
+.header{
+  padding: 25px 0px;
+}
+
+.header-container{
   display: flex;
+  align-items: center;
+  gap: 244px;
+}
+
+.header-right-side{
+  display: flex;
+  align-items: center;
+}
+
+.header-list{
+  display: flex;
+  gap: 50px;
+}
+
+.nav-list{
+  display: flex;
+  gap: 50px;
+  margin-left: 93px;
+}
+
+.header-logo-link{
+  color: var(--black);
+  font-weight: 700;
+  font-size: 26px;
+  font-family: var(--second-family);
+}
+
+.header-logo-link > span{
+  color: var(--logo-span);
+}
+
+.nav-link{
+  color: var(--primary-title);
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.nav-link:hover{
+  color: var(--hover-link);
+}
+
+.header-mail, .header-phone{
+  color: var(--primary-text);
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.header-mail:hover, .header-phone:hover{
+  color: var(--hover-link);
+}
+
+/* projects */
+
+.projects{
+  padding: 94px 0px;
+}
+
+.projects-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.projects-nav-list{
+  display: flex;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+
+.projects-item-btn{
+  border: none;
+  color: var(--primary-title);
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  padding: 6px 22px;
+  cursor: pointer;
+}
+
+.projects-item-btn:hover{ 
+  color: var(--white);
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: var(--btn-background-highlight);
+}
+
+.projects-list{
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
+  column-gap: 30px;
 }
+
+.projects-item-wrap{
+  padding: 20px 24px;
+  border: 1px solid var(--wrap-border);
+  border-top: none;
+}
+
+.projects-item-title{
+  color: var(--primary-title);
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 4px;
+}
+
+.projects-item-mark{
+  color: var(--primary-text);
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+}
+
+/* footer */
+
+.footer{
+  padding: 60px 0px;
+  background-color: var(--background-dark);
+}
+
+.footer-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo-link{
+  color: var(--white);
+  font-weight: 700;
+  font-size: 26px;
+  font-family: var(--second-family);
+}
+
+.footer-logo-link > span{
+  color: var(--logo-span);
+}
+
+.footer-address{
+  margin-top: 20px;
+}
+
+.footer-address-list{
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.footer-item-address{
+  color: var(--white);
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  font-style: normal;
+}
+
+.footer-mail, .footer-phone{
+  color: var(--primary-text);
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+}
+ 
